load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "handler.go",
        "http.go",
        "search.go",
        "show.go",
        "tag.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/handler",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/notmuch",
        "//cli/internal/mail",
        "//cli/internal/protocol",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_test(
    name = "handler_test",
    srcs = ["handler_test.go"],
    embed = [":handler"],
    deps = [
        "//cli/internal/notmuch",
        "//cli/internal/protocol",
    ],
)
