load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handler",
    srcs = [
        "events.go",
        "handler.go",
        "http.go",
        "search.go",
        "show.go",
        "tag.go",
        "tags.go",
        "watcher.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/handler",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/imap",
        "//cli/internal/mail",
        "//cli/internal/notmuch",
        "//cli/internal/protocol",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_test(
    name = "handler_test",
    size = "small",
    srcs = ["handler_test.go"],
    embed = [":handler"],
    deps = [
        "//cli/internal/notmuch",
        "//cli/internal/protocol",
    ],
)
