load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mail",
    srcs = [
        "parser.go",
        "types.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/mail",
    visibility = ["//cli:__subpackages__"],
    deps = ["//cli/internal/encoding"],
)

go_test(
    name = "mail_test",
    srcs = ["parser_test.go"],
    data = glob(["testdata/**"]),
    embed = [":mail"],
)
