load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "notmuch",
    srcs = [
        "mock.go",
        "notmuch.go",
    ],
    importpath = "github.com/durian-dev/durian/cli/internal/notmuch",
    visibility = ["//cli:__subpackages__"],
    deps = ["//cli/internal/sanitize"],
)

go_test(
    name = "notmuch_test",
    srcs = ["notmuch_test.go"],
    embed = [":notmuch"],
)
